community-site: fixes overflow wrap for amount in node profile page

--- a/services/community-site/src/pages/Staking/node-profile-page.scss
+++ b/services/community-site/src/pages/Staking/node-profile-page.scss
@@ -145,6 +145,10 @@
         width: 100%;
       }
 
+      .box-title {
+        overflow-wrap: anywhere;
+      }
+
       .barFlex {
         display: flex;
         flex-direction: row;
